--- a/css/base.css
+++ b/css/base.css
@@ -70,18 +70,24 @@ color:#000;
 	/*IE 7 AND 8 DO NOT SUPPORT BLUR PROPERTY OF SHADOWS*/
 }
 
-#feed{
+#feed ul li ul li{
+	display:inline-block;
 }
 
 #date{
 	font color:#555;
-	line-height:0;
-	height:0;
+	height:18px;
+	width:113px;
 }
 
 #articletitle{
-	width:700px;
-	padding-left:13px
+	width:650px;
+	padding-left:13px;
+	overflow:hidden;
+	text-overflow: ellipsis;
+	-webkit-text-overflow: ellipsis; /* Safari */
+	-o-text-overflow: ellipsis; /* Opera */
+	white-space: nowrap;
 }
 
 #feed a{
@@ -100,13 +106,64 @@ background-color:#A9A9A9;
 color:#000;
 }
 
+#hatena{
+	width:55px;
+}
+
 #blogname{
 	width:200px;
+	overflow:hidden;
+	text-overflow: ellipsis;
+	-webkit-text-overflow: ellipsis; /* Safari */
+	-o-text-overflow: ellipsis; /* Opera */
+	white-space: nowrap;
 }
-
-address {
-	padding:20px;
-	font-size: 10px;
-	color: #000;
+@media(max-width:620px){
+	.title{
+		display: inline-block;
+		padding:0;
+	}
+	.title img{
+		width:290px
+	}
+	.address{
+		display: none;
+	}
+	#wrapper{
+		width:300px;
+	}
+	#feed ul li ul li{
+		display:block
+	}
+	#line{
+		margin-bottom:1px;
+		border:1px solid #999;
+		-moz-border-radius: 3px;
+		-webkit-border-radius: 3px;
+		border-radius: 3px;
+	}
+	#feed #date{
+		font-size: 12px;
+		padding-left: 13px;
+	}
+	#feed #hatena{
+		margin-bottom: -24px;
+		position: relative;
+		left: 227px;
+	}
+	#articletitle{
+		width:271px;
+		padding-left:13px;
+		overflow:visible;
+		white-space:normal
+	}
+	#blogname{
+		overflow:visible;
+		white-space:normal;
+		padding-left: 13px;
+		width: 271px;
+	}
+	#blogname a{
+		font-size:10px;
+	}
 }
-
